Fixed Padding and Font Sizes on Tablet Bio Page

--- a/Sandy-Nguyen-sprint-three/styles/main.scss
+++ b/Sandy-Nguyen-sprint-three/styles/main.scss
@@ -23,7 +23,6 @@ a {
     text-decoration: none;
     text-align: center;
     color: white;
-    padding: 0;
     
     @include mobile {
         font-size: $p-mobile-fontsize;
@@ -82,16 +81,16 @@ a {
                 width: 50%;
             }        
             @include tablet {
-                display: inline-flex;
                 font-size: $h4-desktab-fontsize;
+                vertical-align: bottom;
                 margin: 7% 0 0 8%;
-                padding: 0 1.5% 4% 1.5%;
+                padding: 0 2.5% 4% 0.5%;
+                
             }
             @include desktop {
-                display: inline-flex;
                 font-size: $h4-desktab-fontsize;
-                margin: 5% 0 0 8%;
-                padding: 0 1.5% 3% 1.5%;
+                margin: 4.5% 0 0 7%;
+                padding: 0 1.5% 2.75% 0.5%;
             }
 
             &--active {
@@ -154,7 +153,7 @@ a {
         padding: 2% 7% 0 6%;
 
         @include tablet {
-            padding: 1% 3%;
+            padding: 2.5% 3% 0 3%;
         }
         @include desktop {
             padding: 1% 10%;
@@ -211,10 +210,11 @@ a {
             padding: 8% 0;
         }
         @include tablet {
+            font-size: $namelabel-desktab-fontsize;
             padding: 2% 0;
         }
         @include desktop {
-            font-size: $h4-desktab-fontsize;
+            font-size: $h3-desktab-fontsize;
             padding: 2% 0;
         }
     }
@@ -241,7 +241,7 @@ a {
         @include tablet {
             font-size: $h4-desktab-fontsize;
             padding: 0 3%;
-            line-height: 22px;        
+            line-height: 23px;        
         }
         @include desktop {
             font-size: $h4-desktab-fontsize;
@@ -261,7 +261,7 @@ a {
         margin: 0;
 
         @include tablet {
-            padding: 6% 0 0 3%;
+            padding: 6% 0 4.5% 3%;
         }
         @include desktop {
             padding: 5% 0 0 10%;
@@ -443,10 +443,10 @@ input {
         padding: 8% 4.3%;
                
         @include tablet {
-            font-size: $p-desktab-fontsize;
-            width: 30%;
+            font-size: $h4-desktab-fontsize;
+            width: 37%;
             margin: 0 12% 5% 1%;
-            padding: 3.5% 1.5%;
+            padding: 4%;
         }
         @include desktop {
             font-size: $h4-desktab-fontsize;
@@ -521,6 +521,7 @@ input {
         letter-spacing: 0.75px;
 
         @include tablet {
+            font-size: 1rem;
             margin: 0 2% 0 0;
         }
         @include desktop {
@@ -534,7 +535,7 @@ input {
 
         @include tablet {
             margin: 0;
-            font-size: $h4-desktab-fontsize;
+            font-size: $namelabel-desktab-fontsize;
         }
         @include desktop {
             margin: 0;
@@ -565,14 +566,14 @@ input {
 .footer {
     background-color: $primary-background-color;
     color: white;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
 
     &__heading {
         padding: 5% 0;
         
         @include tablet {
             display: flex;
-            padding: 5% 0;
+            padding: 6% 0 3% 0;
         }
         @include desktop {
             display: flex;
@@ -619,7 +620,7 @@ input {
             
             @include tablet {
                 display: inline-flex;
-                padding: 0 8% 0 0;
+                padding: 0 11% 0 0;
                 width: 25px;
             }
             @include desktop {
@@ -632,14 +633,11 @@ input {
             width: 12.5px;
             
             @include tablet {
-                width: 14px;
+                width: 13.5px;
             }
             @include desktop {
                 width: 14px;
             }
-        }
-        &-logo3 {
-            width: 24px;
         }
     }
     &__main-logo {
@@ -659,6 +657,7 @@ input {
     &__container {
         display: flex;
         justify-content: space-between;
+        margin: 0;
 
         @include mobile {
             flex-direction: column;
@@ -667,7 +666,7 @@ input {
         }
         @include tablet {
             padding: 0 0 0 3%;
-            width: 90%;
+            width: 93%;
         }
         @include desktop {
             padding: 0 10%;
@@ -685,7 +684,7 @@ input {
         }
         @include tablet {
             font-size: $h4-desktab-fontsize;
-            padding-top: 10px;
+            padding-top: 18px;
         }
         @include desktop {
             font-size: $h4-desktab-fontsize;
@@ -695,12 +694,15 @@ input {
         &1 {
             font-weight: 600;
             margin: 0;
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
             line-height: 20px;
 
             @include mobile {
                 font-size: $p-mobile-fontsize;
                 line-height: 17px;
+            }
+            @include tablet {
+                font-size: $namelabel-desktab-fontsize;
             }
         }
     }
@@ -713,7 +715,7 @@ input {
             padding-bottom: 9%;
         }
         @include tablet {
-            padding: 1.5% 0 1% 3%;
+            padding: 2.5% 0 1% 3%;
         }
         @include desktop {
             padding: 1.5% 0 0 10%;
