--- a/Sandy-Nguyen-sprint-three/styles/partials/_mixins.scss
+++ b/Sandy-Nguyen-sprint-three/styles/partials/_mixins.scss
@@ -48,7 +48,7 @@
             font-size: $hero-desktab-fontsize;
         }
         @include desktop {
-            font-size: $h1-desktab-fontsize;
+            font-size: $hero-desktab-fontsize;
         }
     }
     h2 {
