--- a/Sandy-Nguyen-sprint-three/styles/partials/_variables.scss
+++ b/Sandy-Nguyen-sprint-three/styles/partials/_variables.scss
@@ -9,11 +9,12 @@ $comments-box-color: #FAFAFA;
 $circle-divider-color: #E1E1E1;
 $date-color: #AFAFAF;
 
-$hero-desktab-fontsize: 3.75rem; 
+$hero-desktab-fontsize: 4rem;
 $h1-desktab-fontsize: 2.7rem;
 $h2-desktab-fontsize: 2.25rem;
-$h3-desktab-fontsize: 1.45rem;
-$h4-desktab-fontsize: 0.86rem;
+$h3-desktab-fontsize: 1.5rem;
+$namelabel-desktab-fontsize: 1rem;
+$h4-desktab-fontsize: 0.87rem;
 $p-desktab-fontsize: 0.75rem;
 
 $hero-mobile-fontsize: 1.8rem;
