--- a/Sandy-Nguyen-sprint-three/styles/shows.css
+++ b/Sandy-Nguyen-sprint-three/styles/shows.css
@@ -65,13 +65,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   h1 {
-    font-size: 3.75rem;
+    font-size: 4rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   h1 {
-    font-size: 2.7rem;
+    font-size: 4rem;
   }
 }
 
@@ -101,13 +101,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   h3 {
-    font-size: 1.45rem;
+    font-size: 1.5rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   h3 {
-    font-size: 1.45rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -119,13 +119,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   h4 {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   h4 {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
   }
 }
 
@@ -137,13 +137,13 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   p {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
   p {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
   }
 }
 
@@ -255,7 +255,7 @@ a:hover {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    font-size: 0.86rem;
+    font-size: 0.87rem;
     margin: 5% 0 0 8%;
     padding: 0 1.5% 3% 1.5%;
   }
@@ -266,7 +266,7 @@ a:hover {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    font-size: 0.86rem;
+    font-size: 0.87rem;
     margin: 5% 0 0 8%;
     padding: 0 1.5% 3% 1.5%;
   }
@@ -387,7 +387,7 @@ a:hover {
     width: 50%;
     padding: 0 0 2.5% 11%;
     letter-spacing: 0.5px;
-    font-size: 3.75rem;
+    font-size: 4rem;
   }
 }
 
@@ -612,7 +612,7 @@ a:hover {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .main-section__shows-date {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
   }
 }
 
@@ -860,14 +860,14 @@ a:hover {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__content {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
     padding-top: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer__content {
-    font-size: 0.86rem;
+    font-size: 0.87rem;
     padding-top: 10px;
   }
 }
